# web-console-rs

./: .gitignore  Cargo.toml  README.md
migrations/2021-10-29-070740_jobs/: up.sql
src/: job.rs  lib.rs  main.rs  models.rs  monitor.rs  schema.rs  script.rs  script_queue.rs  tcp_connector.rs  util.rs
static/: 404.html  ie.html  index.html  index.js  script.html
