[package]
edition = "2018"
name = "web-console-rs"
version = "0.1.0"
[dependencies]
actix = "*"
actix-files = "0.5.0"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "*"
actix-redis = "*"
actix-rt = "*"
diesel = { version = "*", features = ["mysql"] }
dotenv = "*"
openssl = { version = "0.10", features = ["v110"] }
once_cell = "1.8.0"
redis-async = "*"
sys-info = "*"
systemstat = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "*", features = ["process"] }
tokio-util = { version = "*", features = ["codec"] }
futures = "*"